# Optimization

./: Mission Analysis Code.py  atmosphere.py  climb.py  main.py  mission_state.py  notes.md  plotting.py  test.py
lls/: deneme (1).py  eng_envelope.py  pyproject.toml
lls/envelope_scan/: engine_envelope.csv  engine_envelope_overall_bounds.csv  engine_envelope_summary_by_alt.csv  engine_envelope_summary_by_lever.csv
lls/pyengine/: py11engine.cp311-win_amd64.pyd  py11engine.vcxproj
lls/pyengine.egg-info/: PKG-INFO  SOURCES.txt
lls/stubs/engines/PW1127G-JM/: PW1127G-JM_EPR.csv  PW1127G-JM_St13_Mn.csv  PW1127G-JM_St13_T.csv  PW1127G-JM_St13_Ts.csv  PW1127G-JM_St13_W.csv  PW1127G-JM_St22_Mn.csv  PW1127G-JM_St22_P.csv  PW1127G-JM_St22_Ts.csv  PW1127G-JM_St2_Mn.csv  PW1127G-JM_St2_P.csv  PW1127G-JM_St3_P.csv  PW1127G-JM_St45_T.csv  PW1127G-JM_St45_Ts.csv  PW1127G-JM_St45_W.csv  PW1127G-JM_St45_fa.csv  PW1127G-JM_St4_P.csv  PW1127G-JM_St4_Ts.csv  PW1127G-JM_St4_W.csv  PW1127G-JM_St4_fa.csv  PW1127G-JM_St5_Ts.csv  PW1127G-JM_WF.csv  PW1127G-JM_WFqP3.csv  PW1127G-JM_XN_HPC.csv  PW1127G-JM_sNOx.csv
notes/: atmosphere.md  climb.md
pyengine/: py11engine.vcxproj.filters
stubs/engines/PW1127G-JM/: PW1127G-JM.xml  PW1127G-JM_FN.csv  PW1127G-JM_P3qP2.csv  PW1127G-JM_St13_P.csv  PW1127G-JM_St18_Mn.csv  PW1127G-JM_St18_Rh.csv  PW1127G-JM_St18_T.csv  PW1127G-JM_St18_V.csv  PW1127G-JM_St18_W.csv  PW1127G-JM_St22_T.csv  PW1127G-JM_St22_W.csv  PW1127G-JM_St2_T.csv  PW1127G-JM_St2_Ts.csv  PW1127G-JM_St2_W.csv  PW1127G-JM_St2_fa.csv  (+16 more)
xml/: UNICADO-SMR-180-TF_start.xml
